--- a/templates/add.html
+++ b/templates/add.html
@@ -84,13 +84,13 @@
 
     
         <label for="phone_id">Phone number</label>
-        <input type="number" name="phone" id="phone_id"><br>
+        <input type="tel" name="phone" id="phone_id"><br>
 
 
         
         {% comment %} {{ form.as_p}} {% endcomment %}
 
-        <button type="submit">OK</button>
+        <button type="submit" class="btn btn-success">OK</button>
     </form>
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script>
