--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="col-md-8 ftco-animate">
           	<p>
-              <img src="{% static 'images/image_7.jpg' %}" alt="" class="img-fluid">
+              <img src="{% static 'blog.image.url' %}" alt="" class="img-fluid">
             </p>
             <h2 class="mb-3">It is a long established fact a reader be distracted</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
