--- a/templates/about.html
+++ b/templates/about.html
@@ -16,20 +16,21 @@
     </section>
 
     <section class="ftco-section ftco-no-pb ftco-no-pt">
-			<div class="container">
+			<div class="container mt-5">
 				<div class="row">
+        {% for about in abouts %}
 					<div class="col-md-7 order-md-last d-flex align-items-stretch">
-						<div class="img w-100 img-2 mr-md-2" style="background-image: url('{% static 'images/about.jpg' %}');"></div>
-						<div class="img w-100 img-2 ml-md-2" style="background-image: url('{% static 'images/about-2.jpg' %}');"></div>
+						<div class="img w-100 img-2 mr-md-2" style="background-image: url('{{about.about_image1.url}}');"></div>
+						<div class="img w-100 img-2 ml-md-2" style="background-image: url('{{about.about_image2.url}}');"></div>
 					</div>
 					<div class="col-md-5 wrap-about py-md-5 ftco-animate">
 	          <div class="heading-section pr-md-5">
-	            <h2 class="mb-4">Ecoverde Real Estate</h2>
+	            <h2 class="mb-4">{{about.title}}</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+	            <p>{{about.content}}</p>
 	          </div>
 					</div>
+        {% endfor %}
 				</div>
 			</div>
 		</section>
@@ -37,10 +38,11 @@
 		<section class="ftco-counter img" id="section-counter">
     	<div class="container">
     		<div class="row pt-md-5">
+        {% for about in abouts %}
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="1000">0</strong>
+                <strong class="number" data-number="{{about.population}}">0</strong>
                 <span>Area <br>Population</span>
               </div>
             </div>
@@ -48,7 +50,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="2500">0</strong>
+                <strong class="number" data-number="{{about.properties}}">0</strong>
                 <span>Total <br>Properties</span>
               </div>
             </div>
@@ -56,7 +58,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="500">0</strong>
+                <strong class="number" data-number="{{about.average_house}}">0</strong>
                 <span>Average <br>House</span>
               </div>
             </div>
@@ -64,11 +66,12 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18 py-5 mb-4">
               <div class="text d-flex align-items-center">
-                <strong class="number" data-number="67">0</strong>
+                <strong class="number" data-number="{{about.branches}}">0</strong>
                 <span>Total <br>Branches</span>
               </div>
             </div>
           </div>
+        {% endfor %}
         </div>
     	</div>
     </section>
@@ -82,24 +85,25 @@
           </div>
         </div>
         <div class="row ftco-animate">
+        {% for client in clients %}
           <div class="col-md-12">
             <div class="carousel-testimony owl-carousel">
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
                   	<span class="fa fa-quote-left"></span>
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">{{client.text}}</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url('{% static 'images/person_1.jpg' %}')"></div>
+                    	<div class="user-img" style="background-image: url('{{client.image.url}}')"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">{{client.name}}</p>
+		                    <span class="position">{{client.specialist}}</span>
 		                  </div>
 	                  </div>
                   </div>
                 </div>
               </div>
-              <div class="item">
+              {% comment %} <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
                   	<span class="fa fa-quote-left"></span>
@@ -158,9 +162,10 @@
 	                  </div>
                   </div>
                 </div>
-              </div>
+              </div> {% endcomment %}
             </div>
           </div>
+        {% endfor %}
         </div>
       </div>
     </section>
