--- a/templates/base.html
+++ b/templates/base.html
@@ -42,17 +42,9 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
               
-	            <li class="nav-item {% if request.path == index %} active {% endif %}">
-                <a  class="nav-link" 
-                {% if user.is_authenticated %} 
-                href="../{{ user.username }}"
-                {% else %}
-                href="/"
-                {% endif %}
-                >Home</a>
-              </li>
-            
-
+	          <li class="nav-item {% if request.path == index %} active {% endif %}">
+              <a  class="nav-link" href="/">Home</a>
+            </li>
 	          <li class="nav-item {% if request.path == about %} active {% endif %}">
               <a href="{% url 'about' %}" class="nav-link">About</a>
             </li>
@@ -82,11 +74,11 @@
               <li class="nav-item" >
                 <div class="dropdown">
                   <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <a href="personal" class="nav-link">{{ request.user }}</a>
+                    <a href="" class="nav-link">{{ request.user }}</a>
                   </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="../{{request.user}}">E'lonlar</a>
-                    <a href="../{{request.user}}/add" class="dropdown-item">E'lon berish</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="margin-top: -5px;">
+                    <a class="dropdown-item" href="../../{{request.user}}">E'lonlar</a>
+                    <a href="../../{{request.user}}/add" class="dropdown-item">E'lon berish</a>
                     <a href="../{{request.user}}/edit_profile" class="dropdown-item">Edit</a>
                     <a class="dropdown-item" href="{% url 'logout' %}">Chiqish</a>
                   </div>
